2008-08-08  Martyn Russell  <martyn@imendio.com>

	* configure.ac: Improved the check for ioprio. Patch by Laurent
	Aguerreche. 

2008-08-07  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_metadata_for_imap):
	Ensure we parse the whole message if it was deleted/junk, so we keep
	parsing from the correct position for the next message.

2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-db/tracker-db-manager-test-attach.c: 
	(test_always_same_iface_no_reindex): Removed. It was testing just
	an implementation detail.
	
	* tests/libtracker-db/tracker-index-reader-test.c
	* tests/libtracker-db/tracker-index-writer-test.c: Fixed namespace
	of the tests.

2008-08-07  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (check_disk_space_start)
	(check_disk_space_stop): New functions.
	(tracker_indexer_init): start the low disk check through these
	functions.
	(process_func): 
	(tracker_indexer_set_running): Stop low disk check when the indexer 
	finishes or is paused.
	(check_disk_space_cb): Pause the indexer if there's not enough disk
	space, but keep running the check.

2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* tests/trackerd/example.index
	* tests/trackerd/tracker-index-test.c
	* tests/trackerd/Makefile.am: Moved trackerd index tests to
	libtracker-db as tracker-index-reader-test
		
	* tests/tracker-indexer
	* tests/tracker-indexer/Makefile.am
	* tests/tracker-indexer/tracker-index-test.c: Moved
	tracker-indexer tests to libtracker-db as
	tracker-index-writer-test. They were the only test for
	tracker-indexer so we also remove the folder.

	* tests/libtracker-db/example.index
	* tests/libtracker-db/tracker-index-writer-test.c
	* tests/libtracker-db/Makefile.am
	* tests/libtracker-db/tracker-index-reader-test.c
	* tests/Makefile.am
	* configure.ac: The index code is now merged in libtracker-db, so
	we move the unit tests to libtracker-db. 
	